# Raychel

./: .clang-format  .clang-tidy  .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: find_dependencies.cmake
include/Raychel/Core/: Deserialize.h  Raymarch.h  SDFBooleans.h  SDFContainer.h  SDFModifiers.h  SDFPrimitives.h  SDFTransforms.h  SDFs.h  Scene.h  Serialize.h  Types.h  Xoroshiro128+.h  ZigguratNormal.h
include/Raychel/Render/: Camera.h  Denoise.h  FatPixel.h  Framebuffer.h  MaterialContainer.h  Materials.h  RayHistogram.h  RenderUtils.h  Renderer.h
misc/: generate_ziggurat_tables.py
src/Core/: Deserialize.cpp  Raymarch.cpp  SDFPrimitives.cpp  Scene.cpp  Serialize.cpp  ZigguratNormal.cpp
src/Render/: Denoise.cpp  RenderUtils.cpp  Renderer.cpp
test/: CMakeLists.txt  Ziggurat.test.cpp  main.test.cpp
